--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:image"
     content="https://www.vecteezy.com/vector-art/10586271-breaking-news-background-business-or-technology-template-breaking-news-text-on-dark-blue-with-light-effect-digital-technology-tv-news-show-broadcast-vector-design">
   <meta property="og:url" content="https://www.CivicLensNews.com">
-  <meta property="og:type" content="website" >
+  <meta property="og:type" content="website">
   <!-- ADD link to stylesheet -->
   <link rel="stylesheet" href="styles.css">
   <title>Civic Lens</title>
@@ -39,151 +39,178 @@
         </g>
       </svg>
     </button>
-  
-  <h1>Civic Lens</h1>
-  <p class="tagline">See Clearly. Know Deeply. Act Justly.</p>
 
-  <nav class="mobile-nav" aria-label="Mobile Navigation">
-    <input type="checkbox" id="menu-toggle" hidden>
-    <label for="menu-toggle" class="menu-button">Menu</label>
-    <ul class="menu">
-      <li><a href="#breaking-news">Breaking News</a></li>
-      <li><a href="#featured-aticles">Featured Articles</a></li>
-      <li><a href="#alerts">Alerts</a></li>
-      <li><a href="#social">Social</a></li>
-    </ul>
-  </nav>
-</header>
-<main id="main">
-  <h2>Welcome to Civic Lens</h2>
-  <p>We are an independent news organization dedicated to unbiased reporting, investigative journalism, and truth-driven
-  storytelling. At Civic Lens, our mission is to expose the facts, amplify marginalized voices, and shine light on the
-  systems that shape our society.</p>
-  <blockquote class="tagline">“We don't follow the narrative. We follow the facts.”</blockquote>
+    <h1>Civic Lens</h1>
+    <p class="tagline">See Clearly. Know Deeply. Act Justly.</p>
 
-  <h2>Breaking News</h2>
+    <nav class="mobile-nav" aria-label="Mobile Navigation">
+      <input type="checkbox" id="menu-toggle" hidden>
+      <label for="menu-toggle" class="menu-button">Menu</label>
+      <ul class="menu">
+        <li><a href="#breaking-news">Breaking News</a></li>
+        <li><a href="#featured-articles">Featured Articles</a></li>
+        <li><a href="#alerts">Alerts</a></li>
+        <li><a href="#social">Social</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main id="main">
+    <section id="civiclens">
+      <h2>Welcome to Civic Lens</h2>
+      <p>We are an independent news organization dedicated to unbiased reporting, investigative journalism, and
+        truth-driven
+        storytelling. At Civic Lens, our mission is to expose the facts, amplify marginalized voices, and shine light on
+        the
+        systems that shape our society.</p>
+      <blockquote class="tagline">“We don't follow the narrative. We follow the facts.”</blockquote>
+    </section>
 
-  <h3>Federal Investigation Launched into Water Mismanagement in the Southwest</h3>
-  <p>The Department of Justice has announced a full investigation into decades of water distribution practices affecting
-  tribal lands and rural communities.</p>
-  <video width="600" controls>
-  <source src="videos/water-management.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+    <section id="breaking-news">
+      <h2>Breaking News</h2>
+      <section class="news-container">
+        <div class="news-box">
+          <h3>Federal Investigation Launched into Water Mismanagement in the Southwest</h3>
+          <p>The Department of Justice has announced a full investigation into decades of water distribution practices
+            affecting
+            tribal lands and rural communities.</p>
+          <video width="600" controls>
+            <source src="videos/water-management.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+        <div class="news-box">
+          <h3>Voter Suppression Bill Faces Pushback in State Supreme Court</h3>
+          <p>Civil rights advocates argue that the bill disenfranchises thousands of voters and potential voters of
+            color
+            and those
+            in rural areas of the country.</p>
+          <video width="600" controls>
+            <source src="videos/voter-suppression.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      </section>
+    </section>
+    <section id="featured-articles">
+      <h2>Featured Articles</h2>
+      <section class="featured-container">
+        <div class="featured-box">
+          <h3>The Cost of Silence: Whistleblower Stories from Inside Tech Giants</h3>
+          <p>Former employees speak out about ethical breaches in data privacy and surveillance.</p>
+        </div>
+        <div class="featured-box">
+          <h3>Unequal Justice: How Bail Systems Harm the Poor</h3>
+          <p>An investigative series on cash bail and its disproportionate impact.</p>
+        </div>
+        <div class="featured-box">
+          <h3>Invisible Work: The Lives of Migrant Caregivers</h3>
+          <p>Humanizing the labor that keeps households and economies afloat.</p>
+        </div>
+        <div class="featured-box">
+          <h3>Redlined Still: A New Map of Modern-Day Housing Discrimination</h3>
+          <p>Data visualization showing systemic inequality in real estate today.</p>
+        </div>
+        <div class="featured-box">
+          <h3>Climate Injustice: Who Pays for Pollution?</h3>
+          <p>Communities of color bear the brunt of environmental damage.</p>
+        </div>
+        <div class="featured-box">
+          <h3>Teaching Under Fire: The Fight for Inclusive Education</h3>
+          <p>Teachers navigate book bans, curriculum restrictions, and culture wars.</p>
+        </div>
+        <div class="featured-box">
+          <h3>Food Deserts and Corporate Abandonment</h3>
+          <p>Why access to nutrition is a zip code lottery.</p>
+        </div>
+        <div class="featured-box">
+          <h3>Policing Mental Health: A Broken Response System</h3>
+          <p>Examining police interactions with those in crisis.</p>
+        </div>
+        <div class="featured-box">
+          <h3>The Disinformation Economy</h3>
+          <p>Tracing profit motives behind fake news empires.</p>
+        </div>
+        <div class="featured-box">
+          <h3>Facing the Algorithm: AI and Racial Bias</h3>
+          <p>The coded inequalities that shape our lives.</p>
+        </div>
+        <div class="featured-box">
+          <h3>The Voting Maze</h3>
+          <p>A guide to understanding your rights amid changing laws.</p>
+        </div>
+        <div class="featured-box">
+        <h3>After the Cameras Leave: Long-Term Crisis Recovery</h3>
+        <p>Rebuilding trust and infrastructure in disaster-hit communities.</p>
+      </div>
+      </section>
+    </section>
+    <section id="subscribe">
+      <h2>Stay Informed. Stay Empowered.</h2>
+      <p>Receive text messages with the news you want to know.</p>
 
-  <h3>Voter Suppression Bill Faces Pushback in State Supreme Court</h3>
-  <p>Civil rights advocates argue that the bill disenfranchises thousands of voters and potential voters of color and those
-  in rural areas of the country.</p>
-  <video width="600" controls>
-  <source src="videos/voter-suppression.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
-  
-  <h2>Featured Articles</h2>
+      <form action="https://wp.zybooks.com/form-viewer.php" method="POST">
+        <div class="contact-info">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input id="name" name="name" type="text" required>
+          </div>
 
-  <h3>The Cost of Silence: Whistleblower Stories from Inside Tech Giants</h3>
-  <p>Former employees speak out about ethical breaches in data privacy and surveillance.</p>
+          <div class="form-group">
+            <label for="mobile">Mobile</label>
+            <input id="mobile" name="mobile" type="tel" required>
+          </div>
+        </div>
 
-  <h3>Unequal Justice: How Bail Systems Harm the Poor</h3>
-  <p>An investigative series on cash bail and its disproportionate impact.</p>
+        <fieldset class="notifications">
+          <legend>Notification Preferences</legend>
 
-  <h3>Invisible Work: The Lives of Migrant Caregivers</h3>
-  <p>Humanizing the labor that keeps households and economies afloat.</p>
+          <div class="checkbox">
+            <label><input type="checkbox" name="prefs" value="breaking"> Breaking News</label>
+            <label><input type="checkbox" name="prefs" value="politics"> Politics</label>
+            <label><input type="checkbox" name="prefs" value="weather"> Weather</label>
+            <label><input type="checkbox" name="prefs" value="sports"> Sports</label>
+            <label><input type="checkbox" name="prefs" value="entertainment"> Entertainment</label>
+            <label><input type="checkbox" name="prefs" value="world"> World</label>
+            <label><input type="checkbox" name="prefs" value="financial"> Financial</label>
+          </div>
+        </fieldset>
 
-  <h3>Redlined Still: A New Map of Modern-Day Housing Discrimination</h3>
-  <p>Data visualization showing systemic inequality in real estate today.</p>
+        <button type="submit" class="subscribe-btn">SUBSCRIBE</button>
+      </form>
+    </section>
+    <footer class="socials">
+      <h2>Follow Us</h2>
+      <ul class="social-list">
+        <li><a href="#" class="social-btn">Twitter/X</a></li>
+        <li><a href="#" class="social-btn">Instagram</a></li>
+        <li><a href="#" class="social-btn">YouTube</a></li>
+        <li><a href="#" class="social-btn">TikTok</a></li>
+        <li><a href="#" class="social-btn">LinkedIn</a></li>
+      </ul>
 
-  <h3>Climate Injustice: Who Pays for Pollution?</h3>
-  <p>Communities of color bear the brunt of environmental damage.</p>
+      <p>&copy; 2025 Civic Lens. All rights reserved.</p>
+    </footer>
 
-  <h3>Teaching Under Fire: The Fight for Inclusive Education</h3>
-  <p>Teachers navigate book bans, curriculum restrictions, and culture wars.</p>
+    <script>
+      const toggleButton = document.getElementById('theme-toggle');
 
- <h3>Food Deserts and Corporate Abandonment</h3>
-  <p>Why access to nutrition is a zip code lottery.</p>
+      toggleButton.addEventListener('click', () => {
+        const body = document.body;
 
-  <h3>Policing Mental Health: A Broken Response System</h3>
-  <p>Examining police interactions with those in crisis.</p>
-
-  <h3>The Disinformation Economy</h3>
-  <p>Tracing profit motives behind fake news empires.</p>
-
-  <h3>Facing the Algorithm: AI and Racial Bias</h3>
-  <p>The coded inequalities that shape our lives.</p>
-
-  <h3>The Voting Maze</h3>
-  <p>A guide to understanding your rights amid changing laws.</p>
-
-  <h3>After the Cameras Leave: Long-Term Crisis Recovery</h3>
-  <p>Rebuilding trust and infrastructure in disaster-hit communities.</p>
-
-
-  <h2>Stay Informed. Stay Empowered.</h2>
-  <p>Receive text messages with the news you want to know.</p>
-
-  <form action="https://wp.zybooks.com/form-viewer.php" method="POST">
-  <div class="contact-info">
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input id="name" name="name" type="text" required>
-    </div>
-
-    <div class="form-group">
-      <label for="mobile">Mobile</label>
-      <input id="mobile" name="mobile" type="tel" required>
-    </div>
-  </div>
-
-  <fieldset class="notifications">
-    <legend>Notification Preferences</legend>
-
-    <div class="checkbox">
-      <label><input type="checkbox" name="prefs" value="breaking"> Breaking News</label>
-      <label><input type="checkbox" name="prefs" value="politics"> Politics</label>
-      <label><input type="checkbox" name="prefs" value="weather"> Weather</label>
-      <label><input type="checkbox" name="prefs" value="sports"> Sports</label>
-      <label><input type="checkbox" name="prefs" value="entertainment"> Entertainment</label>
-      <label><input type="checkbox" name="prefs" value="world"> World</label>
-      <label><input type="checkbox" name="prefs" value="financial"> Financial</label>
-    </div>
-  </fieldset>
-
-  <button type="submit" class="subscribe-btn">SUBSCRIBE</button>
-</form>
-
-<footer class="socials">
-  <h2>Follow Us</h2>
-<ul class="social-list">
-    <li><a href="#" class="social-btn">Twitter/X</a></li>
-    <li><a href="#" class="social-btn">Instagram</a></li>
-    <li><a href="#" class="social-btn">YouTube</a></li>
-    <li><a href="#" class="social-btn">TikTok</a></li>
-    <li><a href="#" class="social-btn">LinkedIn</a></li>
-  </ul>
-
-  <p>&copy; 2025 Civic Lens. All rights reserved.</p>
-</footer>
-
-  <script>
-    const toggleButton = document.getElementById('theme-toggle');
-
-    toggleButton.addEventListener('click', () => {
-      const body = document.body;
-
-      // Toggle manually between light and dark mode
-      if (body.classList.contains('dark-mode')) {
-        body.classList.remove('dark-mode');
-        body.classList.add('light-mode');
-      } else if (body.classList.contains('light-mode')) {
-        body.classList.remove('light-mode');
-        body.classList.add('dark-mode');
-      } else {
-        // No class set yet, determine system preference
-        const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-        body.classList.add(prefersDark ? 'light-mode' : 'dark-mode');
-      }
-    });
-  </script>
+        // Toggle manually between light and dark mode
+        if (body.classList.contains('dark-mode')) {
+          body.classList.remove('dark-mode');
+          body.classList.add('light-mode');
+        } else if (body.classList.contains('light-mode')) {
+          body.classList.remove('light-mode');
+          body.classList.add('dark-mode');
+        } else {
+          // No class set yet, determine system preference
+          const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+          body.classList.add(prefersDark ? 'light-mode' : 'dark-mode');
+        }
+      });
+    </script>
   </main>
 </body>
 
